@@ -130,6 +130,11 @@ lengthen raytracing times, depending on the tread.
 .TP
 .B \-u thickness#
 Specify tire thickness in mm.
+.TP
+.B \-w #
+Specify wheel/rim type.  If 0, include no wheel.  As of 7.12.6 only
+one wheel type is included by default.
+
 
 .SH EXAMPLE
 The following will create a tire with width=185mm, ratio=65mm, and wheel
